# platform.core.system.dlog

./: .debuglevel  .gitignore  01-dlog.rules  Makefile.am  Makefile.in  NOTICE  README  autogen.sh  build.sh  config.hin  configure  configure.ac  dlog.all.conf  dlog.pc.in  dlog.radio.conf  dlog.sh  dlog_dump.sh  dlogctrl  dlogutil.manifest  log-common.c  log.c  logctrl.c  logprint.c  logtest.c  logutil.c  project.config  tizen_platform_env.sh
TC/: build.sh
TC/results/: build-tar-result-1313476345.html  build-tar-result-1313476345.journal  build-tar-result-1313476436.html  build-tar-result-1313476436.journal  build-tar-result-1313478621.html  build-tar-result-1313478621.journal  build-tar-result-1313483605.html  build-tar-result-1313483605.journal  build-tar-result-1313484298.html  build-tar-result-1313484298.journal  build-tar-result-1313484369.html  build-tar-result-1313484369.journal  build-tar-result-1313484395.html  build-tar-result-1313484395.journal  build-tar-result-1313484596.html  build-tar-result-1313484596.journal  build-tar-result-1313543556.html  build-tar-result-1313543556.journal  build-tar-result-1313543625.html  build-tar-result-1313543625.journal  build-tar-result-1316429812.html  build-tar-result-1316429812.journal  build-tar-result-1316431101.html  build-tar-result-1316431101.journal
TC/results/0001c/: journal
TC/results/0003c/: journal
TC/results/0005c/: journal
TC/results/0007c/: journal
TC/results/0009c/: journal
TC/results/0011c/: journal
TC/results/0013c/: journal
TC/results/0015c/: journal
TC/results/0017c/: journal
TC/results/0019c/: journal
TC/results/0021c/: journal
TC/results/0023c/: journal
TC/unit/: Makefile  tslist  utc_ApplicationFW___dlog_print_func  utc_ApplicationFW___dlog_print_func.c  utc_ApplicationFW___dlog_vprint_func  utc_ApplicationFW___dlog_vprint_func.c  utc_ApplicationFW_dlog_print_func.c  utc_ApplicationFW_dlog_vprint_func.c
configs/: dlog-pipe.conf  dlog.conf.journal  dlog.conf.kmsg  dlog.conf.logger  dlog.conf.pipe
debian/: changelog  control  copyright  dlog-dev.install.in  dlogutil-bin.install.in  dlogutil-bin.postinst.in  libdlog-0.install.in  rules
doc/: config_files  dlog_doc.h
include/: SLP_Dlog_PG.h  dlog-common.h  dlog-internal.h  dlog.h  dlog.h.m4  dlog_ioctl.h  kmsg_ioctl.h  log_file.h  logcommon.h  logconfig.h  logger.h  logger_ioctl.h  logpipe.h  logprint.h  queued_entry.h
packaging/: 01-dlog.rules.kmsg  01-dlog.rules.logger  99-android-logger.rules  dlog-main.service  dlog-radio.service  dlog-system.service  dlog.changes  dlog.conf.kmsg  dlog.conf.pipe  dlog.service  dlog.spec  dlog@.service  dlog_logger.conf-debug.in  dlog_logger.conf-micro-debug.in  dlog_logger.conf-micro.in  dlog_logger.conf.in  dlog_logger.path  dlog_logger.path.kmsg  dlog_logger.path.logger  dlog_logger.path.pipe  dlog_logger.service  dloginit.service  dlogutil.manifest  libdlog.manifest  tizen-debug-level.service
scripts/: dlogctrl  dlogctrl.in  dlogutil.sh
src/libdlog/: log.c  log_android.c  log_journal.c  log_kmsg.c  log_pipe.c  logconfig.c  loglimiter.c
src/logctrl/: logctrl.c  logctrl_doc.h
src/logger/: .logger.c.swp  logger.c  logger_pipe.c  writer_test.c
src/loginit/: loginit.c
src/logutil/: logutil.c  logutil_doc.h  logutil_journal.c  logutil_kmsg_logger.c  logutil_pipe.c
src/shared/: dlog_ioctl.c  kmsg_ioctl.c  log_file.c  logcommon.c  logcommon.c.rej  logconfig.c  logprint.c  queued_entry.c
tests/: performance_test.c  test.sh  test_kmsg.sh  test_libdlog.c  test_pipe.sh
unittests/: LibDLog.cc  LogInit.cc  Logger.cc  Makefile.tests  default.h
